# RBF-with-Ellipsoid-Constraint

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
data/: Tibia.csv  femur.m  head.m  synthetic_ellipsoid.m  synthetic_ellipsoid.ply  synthetic_ellipsoid.xyz  synthetic_ellipsoid_binary.ply  synthetic_ellipsoid_low_noise.csv  synthetic_ellipsoid_rotated.csv  synthetic_sphere_like.csv
ellipsoid_fitting/: __init__.py  data_generator.py  ellipsoid_fit.py  rbf_ellipsoid.py
examples/: basic_example.py  fit_from_csv.py  fit_multiformat.py
notebooks/: ellipsoid_fitting_demo.ipynb  rbf_ellipsoid_demo.ipynb  rbf_implicit_fitting_demo.ipynb
rbf_ellipsoid_constraint/: __init__.py  data_generator.py  loaders.py  rbf_ellipsoid.py
rbf_implicit_fitting/: __init__.py  ellipsoid_fit.py  rbf_ellipsoid.py  rbf_implicit_fit.py
tests/: test_data_generator.py  test_ellipsoid_fit.py  test_loaders_and_rbf.py
