[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ellipsoid-fitting"
version = "1.0.0"
description = "Least-squares ellipsoid-specific fitting (Li & Griffiths, 2004)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "QL-UoHull" }
]
keywords = ["ellipsoid", "fitting", "least-squares", "3D", "geometry"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "jupyter",
    "nbformat",
]
vis = [
    "scikit-image>=0.19",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ellipsoid_fitting*"]
