[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rbf-ellipsoid-fitting"
version = "1.0.0"
description = "RBR with Ellipsoid Constraint — Implicit fitting using radial basis functions (Li, 2004, Computer Graphics Forum)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "QL-UoHull" }
]
keywords = ["radial basis functions", "implicit fitting", "ellipsoid", "RBF", "3D geometry", "point cloud"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "jupyter",
    "nbformat",
]
vis = [
    "scikit-image>=0.19",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rbf_implicit_fitting*"]
